Add linux camera support

--- a/.github/workflows/static_checks.yml
+++ b/.github/workflows/static_checks.yml
@@ -94,4 +94,5 @@ jobs:
         with:
           skip: "./bin,./thirdparty,*.desktop,*.gen.*,*.po,*.pot,*.rc,./AUTHORS.md,./COPYRIGHT.txt,./DONORS.md,./core/input/gamecontrollerdb.txt,./core/string/locales.h,./editor/project_converter_3_to_4.cpp,./misc/scripts/codespell.sh,./platform/android/java/lib/src/com,./platform/web/node_modules,./platform/web/package-lock.json"
           ignore_words_list: "breaked,curvelinear,doubleclick,expct,findn,gird,hel,inout,lod,mis,nd,numer,ot,requestor,te,vai"
+          exclude_file: ./.github/workflows/codespell_exclude_file.txt
           path: ${{ env.CHANGED_FILES }}
